...
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <EditText
            android:id="@+id/username"
            android:hint="Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/confirm_password"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Switch
...

        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/temperature_standard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/fahrenheit">
            <RadioButton
                android:id="@+id/fahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fahrenheit" />

            <RadioButton
                android:id="@+id/celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Celsius" />
        </RadioGroup>

        <Button
            android:id="@+id/create"
            android:text="Create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>
...
