...
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

            <ImageView
                android:id="@+id/setting"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@android:drawable/ic_menu_preferences"
                android:layout_marginRight="10dp"
                />

            <ImageView
                android:id="@+id/logout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@android:drawable/ic_lock_power_off"
                />

        </LinearLayout>
...

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Chicago" />

            <Button
                android:id="@+id/buttonChicago"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
...
                android:text="Show Details" />
        </LinearLayout>
-->


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/city_list"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/buttonAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add a location" />


    </LinearLayout>
...
