...
                android:layout_height="wrap_content"
                android:text="Date and time : "
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/city_current_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>

...
                android:layout_height="wrap_content"
                android:text="Temperature : "
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/city_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>

...
                android:layout_height="wrap_content"
                android:text="Humidity : "
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/city_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>

...
                android:layout_height="wrap_content"
                android:text="Weather : "
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/city_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>

...
